--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "joi": "^17.9.2",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "path": "^0.12.7"
