--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "mongoose-unique-validator": "^4.0.0",
     "path": "^0.12.7"
   }
 }
